2018-12-13  Vladimir Makarov  <vmakarov@redhat.com>

PR rtl-optimization/88414
	* lra-int.h (lra_asm_error_p): New.
	* lra-assigns.c (lra_assign): Check lra_asm_error_p for checking
	call crossed pseudo assignment correctness.
	(lra_split_hard_reg_for): Set up lra_asm_error_p.
	* lra-constraints.c (curr_insn_transform): Ditto.
	* lra.c (lra_asm_error_p): New.
	(lra): Reset lra_asm_error_p.

2018-12-13  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/88414
	* gcc.target/i386/pr88414.c: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@267109 138bc75d-0d04-0410-961f-82ee72b054a4